Clean up, link changes and charabia issues added

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -12,9 +12,9 @@ Some SDKs might not include all new features—consult the project repository fo
 ## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts vectors in documents, stores them, and lets users retrieve the nearest documents using the search endpoint.
 
-This experimental feature can be enabled at runtime using our new `/experimental-features` endpoint.
+This experimental feature can be enabled at runtime using v1.3.0's new `/experimental-features` endpoint.
 ```bash
-❯ curl \
+curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
   -H 'Content-Type: application/json'  \
 --data-binary '{
@@ -25,7 +25,7 @@ This experimental feature can be enabled at runtime using our new `/experimental
 
 ### Sending Vectorized Documents
 
-For the first iteration of this feature you must compute the vectors on your side before sending to Meilisearch. Vectors should be sent with the document itself using the `_vectors` field.  TBD (is there a doc here for how to do this?) Multiple vectors can be sent for a single document.
+For the first iteration of this feature you must compute the vectors on your side before sending to Meilisearch. Vectors should be sent with the document itself using the `_vectors` field. Multiple vectors can be sent for a single document.
 
 ⚠️ Note the size of the vectors must be the same across all of your documents. If the sizes are inconsistent you will see an error in your tasks.
 
@@ -50,7 +50,7 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 we will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticSimilarity` property. The higher the ranking score, the more similar the document.
+As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticSimilarity` property. The higher the ranking score, the more similar the document.
 
 ```json
 {
@@ -69,7 +69,7 @@ As part of v1.3.0 we will return a similarity score as part of the documents ret
 ```
 
 
-🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/621).
+🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/677).
 
 ⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
 
@@ -86,7 +86,7 @@ Meilisearch v1.3.0 introduces ranking scores per document via the `showRankingSc
 
 ### Ranking score details - Experimental 
 
-Additionally, as an experimental feature, you can view detailed scores per ranking rule for each document via the `showRankingScoreDetails` search query parameter. With this in place each document will return with a `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
+Additionally, as an experimental feature, you can view detailed scores per ranking rule for each document via the `showRankingScoreDetails` search query parameter. With this in place each document will return with an `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
 
 ```json 
 "_rankingScoreDetails": {
@@ -120,9 +120,9 @@ Additionally, as an experimental feature, you can view detailed scores per ranki
             }
 ```
 
-This experimental feature can be turned on at runtime using our new `/experimental-features` endpoint.
+This experimental feature can be turned on at runtime using v1.3.0's new `/experimental-features` endpoint.
 ```bash
-❯ curl \
+ curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
   -H 'Content-Type: application/json'  \
 --data-binary '{
@@ -131,7 +131,7 @@ This experimental feature can be turned on at runtime using our new `/experiment
 
 ```
 
-🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/meilisearch/discussions/594).
+🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/594).
 
 ⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
 
@@ -173,12 +173,12 @@ Done by @ManyTheFish in (#3834)
 
 
 ## Search for facet values
-Meilisearch v1.3.0 introduces a new endpoint  `POST /indexes/{index}/facet-search` that allows you to search for facet values. Only fields defined as `filterableAttributes` will be facet searchable.
+Meilisearch v1.3.0 introduces a new endpoint  `POST /indexes/{index}/facet-search` that allows you to search for facet values. Only fields defined as `filterableAttributes` will be facet-searchable. Facet search supports [prefix search](https://www.meilisearch.com/docs/learn/advanced/prefix) and [typo tolerance](https://www.meilisearch.com/docs/learn/configuration/typo_tolerance).
 
 Done by @Kerollmops in (#3611)
 
 ## Sort facet values by count
-By default, all facet values are sorted in ascending alphanumeric order. With the release of v1.3.0 you can change this using the `sortFacetValuesBy` property of the [`faceting` index settings](/reference/api/settings#faceting). This will allow you to sort facet by value count i.e. the genre with the highest number of results shows first.
+By default, all facet values are sorted in ascending alphanumeric order. With the release of v1.3.0 you can change this using the `sortFacetValuesBy` property of the [`faceting` index settings](https://www.meilisearch.com/docs/reference/api/settings#faceting). This will allow you to sort facet by value count i.e. the genre with the highest number of results shows first.
 
 Done by @Kerollmops in (#3612)
 
@@ -187,22 +187,27 @@ Done by @Kerollmops in (#3612)
 * Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
 
 
+### Language support improvements
 
-## Language support improvements
+<!-- Charabia changelogs from 0.7.2 onwards: -->
+* Transform classifier into normalizer (#214) @ManyTheFish 
+* Update Lindera to 0.24.0 (#212) @mosuka
+* Handle underscore similarly to dash (#216) @vvv 
+* Add UniDic implimentation (#218) @mosuka
+* Bump peter-evans/create-pull-request from 4 to 5 (#213)
+* Bump Swatinem/rust-cache from 2.2.1 to 2.4.0 (#217)
 
-* TBD charabia changes to be included
 
-## Other improvements
+### Other improvements
 * Improve the metrics. Make the metrics easier to use and provides info on the task queue. (#3789) @irevoire
-* Remove the `docid_word_positions` database. Reduces the index size. (#3819) @loiclec
+* Removes the `docid_word_positions` database, which was only used during deletion operations. This change reduces the index size & fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting. (#3819, #3816) @loiclec
+* Adds the new experimental features endpoint to enable/disable scoreDetail and vectorSearch experimental features (#3850) @dureuill 
 
 # Fixes 🐞
-
-  * Changes the way words are counted in the word count DB (#3824) @dureuill 
-  * Fix addition deletion bug (#3670) @irevoire
+  * Fixes an issue with the MatchesFull strategy when the query contains a hard separator. Changes the way words are counted in the word count DB. (#3824) @dureuill 
+  * Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
 
 # Misc
-
 
 * Dependencies upgrade
   * Bump actions/setup-go from 3 to 4 (#3805)
@@ -220,6 +225,7 @@ Done by @Kerollmops in (#3612)
 * Documentation
   * Move comments above keys in config.toml (#3731) @jirutka 
   * Add more documentation to graph-based ranking rule algorithms + comment cleanup (#3835) @loiclec
+  * docs: fixed some broken links (#3853) @0xflotus 
 
 * Misc
   * Revert "Improve docker cache" (#3781) @curquiza 
@@ -227,6 +233,6 @@ Done by @Kerollmops in (#3612)
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv 
-- [Charabia](https://github.com/meilisearch/charabia): 
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @cuishuang, @jirutka, @vvv, @0xflotus 
+- [Charabia](https://github.com/meilisearch/charabia): @mosuka, @vvv 
 
