metrics update & pr link fix

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -175,7 +175,7 @@ Done by @ManyTheFish in (#3834)
 ## Search for facet values
 Meilisearch v1.3.0 introduces a new endpoint  `POST /indexes/{index}/facet-search` that allows you to search for facet values. Only fields defined as `filterableAttributes` will be facet-searchable. Facet search supports [prefix search](https://www.meilisearch.com/docs/learn/advanced/prefix) and [typo tolerance](https://www.meilisearch.com/docs/learn/configuration/typo_tolerance).
 
-Done by @Kerollmops in (#3611)
+Done by @Kerollmops in (#3699)
 
 ## Sort facet values by count
 By default, all facet values are sorted in ascending alphanumeric order. With the release of v1.3.0 you can change this using the `sortFacetValuesBy` property of the [`faceting` index settings](https://www.meilisearch.com/docs/reference/api/settings#faceting). This will allow you to sort facet by value count i.e. the genre with the highest number of results shows first.
@@ -199,7 +199,7 @@ Done by @Kerollmops in (#3612)
 
 
 ### Other improvements
-* Improve the metrics. Make the metrics easier to use and provides info on the task queue. (#3789) @irevoire
+* Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Prefixes all metrics with `_meilisearch`. (#3789) @irevoire
 * Removes the `docid_word_positions` database, which was only used during deletion operations. This change reduces the index size & fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting. (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable scoreDetail and vectorSearch experimental features (#3850) @dureuill 
 
