Anticipating charabia version bump

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -27,7 +27,7 @@ curl \
 
 For the first iteration of this feature you must compute the vectors on your side before sending to Meilisearch. Vectors should be sent with the document itself using the `_vectors` field. Multiple vectors can be sent for a single document.
 
-⚠️ Note the size of the vectors must be the same across all of your documents. If the sizes are inconsistent you will see an error in your tasks.
+⚠️ Note the size of the vectors must be the same across all of your documents. If the sizes are inconsistent Meilisearch will show an error in your tasks.
 
 ```bash
 curl -X POST -H 'content-type: application/json' \
@@ -202,6 +202,9 @@ Done by @Kerollmops in (#3612)
 * Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Prefixes all metrics with `_meilisearch`. (#3789) @irevoire
 * Removes the `docid_word_positions` database, which was only used during deletion operations. This change reduces the index size & fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting. (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable scoreDetail and vectorSearch experimental features (#3850) @dureuill 
+* Update Charabia version to v.0.7.3
+  * Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
+
 
 # Fixes 🐞
   * Fixes an issue with the MatchesFull strategy when the query contains a hard separator. Changes the way words are counted in the word count DB. (#3824) @dureuill 
