updates from feedback

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -1,6 +1,6 @@
 # v1.3.0 release changelogs
 
-Meilisearch v1.3.0 introduces Meilisearch as a vector store, it introduces visible ranking score details and defining a field to search on at search time.  It also now includes the ability to search within facet values and facet values that are sortable.
+Meilisearch v1.3.0 introduces Meilisearch as a vector store, it introduces visible ranking score details and defining fields to search on at search time. It also now includes the ability to search within facet values and sort facet values by count.
 
 <!-- The following lines should ONLY be put in the official release changelogs -->
 🧰 All official Meilisearch integrations (including SDKs, clients, and other tools) are compatible with this Meilisearch release. Integration deployment happens between 4 to 48 hours after a new version becomes available.
@@ -10,7 +10,7 @@ Some SDKs might not include all new features—consult the project repository fo
 # New features and improvements 🔥
 
 ## Vector Store - Experimental
-The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts vectors in documents, stores them, and lets users retrieve the nearest documents using the search endpoint.
+The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts multiple embeddings (semantic vectors) per document, stores them, and lets users retrieve the nearest documents using the `/search` or `/multi-search` routes.
 
 This experimental feature can be enabled at runtime using v1.3.0's new `/experimental-features` endpoint.
 ```bash
@@ -18,7 +18,7 @@ curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
   -H 'Content-Type: application/json'  \
 --data-binary '{
-    "vectorSearch": true
+    "vectorStore": true
   }'
 
 ```
@@ -41,7 +41,7 @@ curl -X POST -H 'content-type: application/json' \
 
 ### Query Meilisearch using Vectors
 
-You can query the nearest documents using the default `/search` route by sending the vector of your query via the `vector` field. Again, for the first iteration you must compute the vector query on your side before requesting from Meilisearch.
+You can query the documents with the nearest vector using the default `/search` route by sending the vector of your query via the `vector` field. Again, for the first iteration you must compute the vector query on your side before requesting from Meilisearch.
 
 ```bash
 curl -X POST -H 'content-type: application/json' \
@@ -50,14 +50,14 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticSimilarity` property. The higher the ranking score, the more similar the document.
+As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score is a dot product viewed under the `_semanticScore` property. 
 
 ```json
 {
   "hits": [
-    { "id": 0, "_vectors": [0, 0.8, -0.2], "text": "Hello World", "_semanticSimilarity": 0.6754 },
-    { "id": 1, "_vectors": [1, -0.2, 0], "text": "Hello Doggy", "_semanticSimilarity": 0.7546 },
-    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "text": "Hello People", "_semanticSimilarity": 0.78 }
+    { "id": 0, "_vectors": [0, 0.8, -0.2], "text": "Hello World", "_semanticScore": 0.6754 },
+    { "id": 1, "_vectors": [1, -0.2, 0], "text": "Hello Doggy", "_semanticScore": 0.7546 },
+    { "id": 2, "_vectors": [[0.5, 3, 1], [-0.2, 4, 6]], "text": "Hello People", "_semanticScore": 0.78 }
   ],
   "query": "",
   "vector": [0, 1, 2],
@@ -131,17 +131,17 @@ This experimental feature can be turned on at runtime using v1.3.0's new `/exper
 
 ```
 
-🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/594).
+🗣️ Since this feature is experimental, we need your help to iterate on it! You are more than welcome to share your thoughts and your feedback on [this discussion](https://github.com/meilisearch/product/discussions/674).
 
 ⚠️ The experimental feature API can break between Meilisearch versions. Be careful if using it in production.
 
 Done by @dureuill in #3771
 
-## Define field to search on at search time
+## Define fields to search on at search time
 
 v1.3.0 introduces a new search parameter, `attributesToSearchOn`.
 
-`attributesToSearchOn` is a search parameter accepting an array of strings indicating one or more document attributes. Queries using `attributesToSearchOn` will restrict the search to the indicated attributes.
+`attributesToSearchOn` is a search parameter accepting an array of strings indicating one or more document attributes. Queries using `attributesToSearchOn` will restrict the search to the indicated attributes. Note the chosen attributes must be part of the [searchable attributes](https://www.meilisearch.com/docs/learn/configuration/displayed_searchable_attributes#the-searchableattributes-list) in settings.
 
 Given the following dataset:
 ```json
@@ -169,6 +169,7 @@ Meilisearch will only return document 1.
 
 Both documents contain the word adventure, but `"attributesToSearchOn": ["genre"]` instructs Meilisearch to only consider results found on the genre field.
 
+
 Done by @ManyTheFish in (#3834)
 
 
@@ -185,7 +186,7 @@ Done by @Kerollmops in (#3612)
 ### Performance improvements
 
 * Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
-
+* Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
 
 ### Language support improvements
 
@@ -200,15 +201,15 @@ Done by @Kerollmops in (#3612)
 
 ### Other improvements
 * Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Prefixes all metrics with `_meilisearch`. (#3789) @irevoire
-* Removes the `docid_word_positions` database, which was only used during deletion operations. This change reduces the index size & fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting. (#3819, #3816) @loiclec
-* Adds the new experimental features endpoint to enable/disable scoreDetail and vectorSearch experimental features (#3850) @dureuill 
+* Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
+* Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
 * Update Charabia version to v.0.7.3
   * Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 
 
 # Fixes 🐞
   * Fixes an issue with the MatchesFull strategy when the query contains a hard separator. Changes the way words are counted in the word count DB. (#3824) @dureuill 
-  * Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
+
 
 # Misc
 
