--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -200,7 +200,8 @@ Done by @Kerollmops in (#3612)
 
 
 ### Other improvements
-* Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Prefixes all metrics with `_meilisearch`. (#3789) @irevoire
+* Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. (#3789) @irevoire
+* Add "meilisearch" prefix to last metrics that were missing it (#3861) @dureuill 
 * Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
 * Update Charabia version to v.0.7.3
