--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -12,7 +12,7 @@ Some SDKs might not include all new features—consult the project repository fo
 ## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts multiple embeddings (semantic vectors) per document, stores them, and lets users retrieve the nearest documents using the `/search` or `/multi-search` routes.
 
-This experimental feature can be enabled at runtime using v1.3.0's new `/experimental-features` endpoint.
+This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
@@ -78,7 +78,16 @@ Done by @Kerollmops in #3825
 
 ## Display ranking scores at search
 
-Meilisearch v1.3.0 introduces ranking scores per document via the `showRankingScore` search query parameter. With this in place each document will return with a `_rankingScore` property displaying a score between 0 and 1. The higher the ranking score, the more relevant the document.
+Meilisearch v1.3.0 introduces ranking scores per document via the `showRankingScore` search query parameter. 
+
+```bash 
+curl \
+  -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{ "q": "Batman Returns", "showRankingScore": true }'
+```
+
+Using this search query parameter means that each document will return with a `_rankingScore` property displaying a score between 0 and 1. The higher the ranking score, the more relevant the document.
 
 ```json 
 "_rankingScore": 0.8575757575757575,
@@ -86,7 +95,16 @@ Meilisearch v1.3.0 introduces ranking scores per document via the `showRankingSc
 
 ### Ranking score details - Experimental 
 
-Additionally, as an experimental feature, you can view detailed scores per ranking rule for each document via the `showRankingScoreDetails` search query parameter. With this in place each document will return with an `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
+Additionally, as an experimental feature, you can view detailed scores per ranking rule for each document via the `showRankingScoreDetails` search query parameter. 
+
+```bash 
+curl \
+  -X POST 'http://localhost:7700/indexes/movies/search' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{ "q": "Batman Returns", "showRankingScoreDetails": true }'
+```
+
+With this search query parameter in place each document will return with an `_rankingScoreDetails` JSON object. That object will contain a property and a score value for each ranking rule. 
 
 ```json 
 "_rankingScoreDetails": {
@@ -120,7 +138,7 @@ Additionally, as an experimental feature, you can view detailed scores per ranki
             }
 ```
 
-This experimental feature can be turned on at runtime using v1.3.0's new `/experimental-features` endpoint.
+This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
 ```bash
  curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
@@ -209,7 +227,7 @@ Done by @Kerollmops in (#3612)
 
 
 # Fixes 🐞
-  * Fixes an issue with the MatchesFull strategy when the query contains a hard separator. Changes the way words are counted in the word count DB. (#3824) @dureuill 
+  * Fix matching results returned by the `exactness` ranking rules when there are hard separators present (#3824) @dureuill 
 
 
 # Misc
@@ -222,9 +240,7 @@ Done by @Kerollmops in (#3612)
 
 * CIs and tests
   * Add a cron test with disabled tokenization (with @roy9495) (#3779) @curquiza
-  * Improve SDK CI to choose the Docker image (#3783) @curquiza
-  * Fix SDK CI for scheduled jobs (#3813) @curquiza
-  * Fix SDK CI (again) (#3844) @curquiza
+  * Improve SDK CI to choose the Docker image (#3844, #3813, #3783) @curquiza
   * Fix error messages in `check-release.sh` (#3799) @vvv
 
 * Documentation
@@ -234,7 +250,6 @@ Done by @Kerollmops in (#3612)
 
 * Misc
   * Revert "Improve docker cache" (#3781) @curquiza 
-  * Bring back changes from `release-v1.2.0` to `main` (#3811) @curquiza
   * Fix some typos (#3842) @cuishuang 
 
 ❤️ Thanks again to our external contributors:
