added facet values examples

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -194,10 +194,50 @@ Done by @ManyTheFish in (#3834)
 ## Search for facet values
 Meilisearch v1.3.0 introduces a new endpoint  `POST /indexes/{index}/facet-search` that allows you to search for facet values. Only fields defined as `filterableAttributes` will be facet-searchable. Facet search supports [prefix search](https://www.meilisearch.com/docs/learn/advanced/prefix) and [typo tolerance](https://www.meilisearch.com/docs/learn/configuration/typo_tolerance).
 
+```bash
+ curl \
+  -X PATCH 'http://localhost:7700/indexes/movies/facet-search' \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "facetName": "genres",
+    "facetQuery": "a"
+  }'
+
+```
+
 Done by @Kerollmops in (#3699)
 
 ## Sort facet values by count
-By default, all facet values are sorted in ascending alphanumeric order. With the release of v1.3.0 you can change this using the `sortFacetValuesBy` property of the [`faceting` index settings](https://www.meilisearch.com/docs/reference/api/settings#faceting). This will allow you to sort facet by value count i.e. the genre with the highest number of results shows first.
+By default, all facet values are sorted in ascending alphanumeric order. 
+```json
+"sortFacetValuesBy": {"*": "alpha"}
+```
+
+With the release of v1.3.0 you can now order by `count` using the `sortFacetValuesBy` property of the [`faceting` index settings](https://www.meilisearch.com/docs/reference/api/settings#faceting). This allows you to sort facet values in descending order by the number of documents containing that facet value.
+
+It is possible to change this ordering for all facets using `*`:
+
+```bash
+ curl \
+  -X PATCH 'http://localhost:7700/indexes/movies/settings/faceting \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "sortFacetValuesBy": {"*": "count"}
+  }'
+
+```
+
+Alternatively, it is possible to specify ordering per facet i.e. order the genre facet by count, for everything else apply alphanumeric ordering.
+
+```bash
+ curl \
+  -X PATCH 'http://localhost:7700/indexes/movies/settings/faceting \
+  -H 'Content-Type: application/json'  \
+--data-binary '{
+    "sortFacetValuesBy": {"*": "alpha", "genre": 'count'}
+  }'
+
+```
 
 Done by @Kerollmops in (#3612)
 
