--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -285,7 +285,7 @@ Done by @Kerollmops in (#3612)
 
 * Documentation
   * Move comments above keys in config.toml (#3731) @jirutka 
-  * Add more documentation to graph-based ranking rule algorithms + comment cleanup (#3835) @loiclec
+  * Add more documentation to graph-based ranking rule algorithms (#3835) @loiclec
   * Fix some broken links (#3853) @0xflotus 
 
 * Misc
