feedback and cloud link

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -12,7 +12,8 @@ Some SDKs might not include all new features—consult the project repository fo
 ## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts multiple embeddings (semantic vectors) per document, stores them, and lets users retrieve the nearest documents using the `/search` or `/multi-search` routes.
 
-This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
+This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately.
+
 ```bash
 curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
@@ -50,7 +51,7 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score is a dot product viewed under the `_semanticScore` property. 
+As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticScore` property. The higher the ranking score, the more similar the document.
 
 ```json
 {
@@ -138,7 +139,7 @@ With this search query parameter in place each document will return with an `_ra
             }
 ```
 
-This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
+This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately.
 ```bash
  curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
@@ -241,11 +242,6 @@ Alternatively, it is possible to specify ordering per facet i.e. order the genre
 
 Done by @Kerollmops in (#3612)
 
-### Performance improvements
-
-* Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
-* Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
-
 ### Language support improvements
 
 <!-- Charabia changelogs from 0.7.2 onwards: -->
@@ -262,6 +258,8 @@ Done by @Kerollmops in (#3612)
 * Add "meilisearch" prefix to last metrics that were missing it (#3861) @dureuill 
 * Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
+* Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
+* Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
 * Update Charabia version to v.0.7.3
   * Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 
