added after upgrade to avoid confusion

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -12,7 +12,7 @@ Some SDKs might not include all new features—consult the project repository fo
 ## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts multiple embeddings (semantic vectors) per document, stores them, and lets users retrieve the nearest documents using the `/search` or `/multi-search` routes.
 
-This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately.
+This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately after upgrade.
 
 ```bash
 curl \
@@ -139,7 +139,7 @@ With this search query parameter in place each document will return with an `_ra
             }
 ```
 
-This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately.
+This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately after upgrade.
 ```bash
  curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
