changed to POST

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -197,7 +197,7 @@ Meilisearch v1.3.0 introduces a new endpoint  `POST /indexes/{index}/facet-searc
 
 ```bash
  curl \
-  -X PATCH 'http://localhost:7700/indexes/movies/facet-search' \
+  -X POST 'http://localhost:7700/indexes/movies/facet-search' \
   -H 'Content-Type: application/json'  \
 --data-binary '{
     "facetName": "genres",
