--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -245,12 +245,8 @@ Done by @Kerollmops in (#3612)
 ### Language support improvements
 
 <!-- Charabia changelogs from 0.7.2 onwards: -->
-* Transform classifier into normalizer (#214) @ManyTheFish 
-* Update Lindera to 0.24.0 (#212) @mosuka
-* Handle underscore similarly to dash (#216) @vvv 
-* Add UniDic implimentation (#218) @mosuka
-* Bump peter-evans/create-pull-request from 4 to 5 (#213)
-* Bump Swatinem/rust-cache from 2.2.1 to 2.4.0 (#217)
+* Enhance Japanese words segmentation (#218) @mosuka
+* Enhance Separator based segmentation (#215) @ManyTheFish 
 
 
 ### Other improvements
