prep for charabia release link

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -244,9 +244,10 @@ Done by @Kerollmops in (#3612)
 
 ### Language support improvements
 
-<!-- Charabia changelogs from 0.7.2 onwards: -->
 * Enhance Japanese words segmentation (#218) @mosuka
 * Enhance Separator based segmentation (#215) @ManyTheFish 
+
+Done by @ManyTheFish, @mosuka in [#] and in [Charabia v0.7.3](https://github.com/meilisearch/charabia/releases/tag/v0.7.3)
 
 
 ### Other improvements
@@ -256,8 +257,7 @@ Done by @Kerollmops in (#3612)
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
 * Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
 * Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
-* Update Charabia version to v.0.7.3
-  * Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
+* Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 
 
 # Fixes 🐞
