rewording to make it more user friendly
Co-authored-by: Clémentine U. - curqui <clementine@meilisearch.com>

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -255,7 +255,7 @@ Done by @ManyTheFish, @mosuka in [#] and in [Charabia v0.7.3](https://github.com
 * Add "meilisearch" prefix to last metrics that were missing it (#3861) @dureuill 
 * Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
-* Use `RoaringBitmap::deserialize_unchecked_from` to reduce the deserialization time (#3788) @Kerollmops 
+* Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` which reduces the number of checks (#3788) @Kerollmops 
 * Fix addition deletion bug. Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
 * Fixes an issue where searching for words without `.` doesn't match any string in the index. ([#151](https://github.com/meilisearch/product/discussions/151), [#3778](https://github.com/meilisearch/meilisearch/discussions/3778))
 
