spacing and metrics update

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -109,34 +109,34 @@ With this search query parameter in place each document will return with an `_ra
 
 ```json 
 "_rankingScoreDetails": {
-                "words": {
-                    "order": 0,
-                    "matchingWords": 1,
-                    "maxMatchingWords": 1,
-                    "score": 1.0
-                },
-                "typo": {
-                    "order": 1,
-                    "typoCount": 0,
-                    "maxTypoCount": 1,
-                    "score": 1.0
-                },
-                "proximity": {
-                    "order": 2,
-                    "score": 1.0
-                },
-                "attribute": {
-                    "order": 3,
-                    "attributes_ranking_order": 0.8,
-                    "attributes_query_word_order": 0.6363636363636364,
-                    "score": 0.7272727272727273
-                },
-                "exactness": {
-                    "order": 4,
-                    "matchType": "noExactMatch",
-                    "score": 0.3333333333333333
-                }
-            }
+  "words": {
+    "order": 0,
+    "matchingWords": 1,
+    "maxMatchingWords": 1,
+    "score": 1.0
+  },
+  "typo": {
+    "order": 1,
+    "typoCount": 0,
+    "maxTypoCount": 1,
+    "score": 1.0
+  },
+  "proximity": {
+    "order": 2,
+    "score": 1.0
+  },
+  "attribute": {
+    "order": 3,
+    "attributes_ranking_order": 0.8,
+    "attributes_query_word_order": 0.6363636363636364,
+    "score": 0.7272727272727273
+  },
+  "exactness": {
+    "order": 4,
+    "matchType": "noExactMatch",
+    "score": 0.3333333333333333
+  }
+}
 ```
 
 This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately after upgrade.
@@ -251,7 +251,7 @@ Done by @ManyTheFish, @mosuka in [#] and in [Charabia v0.7.3](https://github.com
 
 
 ### Other improvements
-* Improve the metrics. Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. (#3789) @irevoire
+* Improve the experimental feature to use metrics with Prometheus ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. (#3789) @irevoire
 * Add "meilisearch" prefix to last metrics that were missing it (#3861) @dureuill 
 * Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
