Split to 2 line items to make things easier to understand
Co-authored-by: Clémentine U. - curqui <clementine@meilisearch.com>

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -252,7 +252,8 @@ Done by @ManyTheFish, @mosuka in [#] and in [Charabia v0.7.3](https://github.com
 
 ### Other improvements
 * Improve the experimental feature to use metrics with Prometheus ([#625](https://github.com/meilisearch/product/discussions/625)). Provides metrics on the task queue such as the number of queued tasks and the number of processing tasks. Adds the real database size used by Meilisearch. Add "meilisearch" prefix to metrics (#3789, #3861) @irevoire @dureuill 
-* Removes the `docid_word_positions` database, which was only used during deletion operations. In our tests this change reduced approximately 15% of the index size. It also fixes an issue around incorrect deletion of documents when using the disableOnAttributes typo setting.  (#3819, #3816) @loiclec
+* Reduce the size the index size (approximately 15%) by removing an internal database (#3819) @loiclec
+* Fix an issue around incorrect deletion of documents when using the `disableOnAttributes` typo setting  (#3819) @loiclec
 * Adds the new experimental features endpoint to enable/disable `scoreDetails` and `vectorStore` experimental features (#3850) @dureuill 
 * Reduce deserialization time by using `RoaringBitmap::deserialize_unchecked_from` which reduces the number of checks (#3788) @Kerollmops 
 * Re-enables automatically batching addition and deletion tasks together to speed up indexing (#3670) @irevoire 
