dot product term added

--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -51,7 +51,7 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. This score will be between 0 and 1 and viewed under the `_semanticScore` property. The higher the ranking score, the more similar the document.
+As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. The score is a dot product viewed under the _semanticScore property.
 
 ```json
 {
