--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -51,7 +51,7 @@ curl -X POST -H 'content-type: application/json' \
 ```
 
 ### Similarity score
-As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. The score is a dot product viewed under the _semanticScore property.
+As part of v1.3.0 Meilisearch will return a similarity score as part of the documents retrieved. The score is a dot product viewed under the `_semanticScore` property.
 
 ```json
 {
