--- a/meilisearch-release-changelog/v1.3.0.md
+++ b/meilisearch-release-changelog/v1.3.0.md
@@ -7,12 +7,17 @@ Meilisearch v1.3.0 introduces Meilisearch as a vector store, it introduces visib
 
 Some SDKs might not include all new features—consult the project repository for detailed information. Is a feature you need missing from your chosen SDK? Create an issue letting us know you need it, or, for open-source karma points, open a PR implementing it (we'll love you for that ❤️).
 
+## ⚡ Supercharge your Meilisearch experience
+
+Say goodbye to server deployment and manual updates with [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch). No credit card required.
+
+
 # New features and improvements 🔥
 
 ## Vector Store - Experimental
 The release of v1.3.0 enables Meilisearch to serve as a vector store. This means Meilisearch now accepts multiple embeddings (semantic vectors) per document, stores them, and lets users retrieve the nearest documents using the `/search` or `/multi-search` routes.
 
-This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately after upgrade.
+This experimental feature can be enabled via the HTTP API using v1.3.0's new `/experimental-features` endpoint.
 
 ```bash
 curl \
@@ -139,7 +144,8 @@ With this search query parameter in place each document will return with an `_ra
 }
 ```
 
-This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. If you are using [Meilisearch Cloud](https://www.meilisearch.com/pricing?utm_campaign=oss&utm_source=engine&utm_medium=meilisearch) this can be enabled immeadiately after upgrade.
+This experimental feature can be turned on via the HTTP API using v1.3.0's new `/experimental-features` endpoint. 
+
 ```bash
  curl \
   -X PATCH 'http://localhost:7700/experimental-features/' \
